--- a/father-app.html
+++ b/father-app.html
@@ -199,21 +199,38 @@
   </div>
 
   <script>
-    // 內建蜂鳴聲（用 Web Audio API，唔使靠外部連結，永遠有效）
-    function playBeep(times = 1, freq = 700, dur = 150, interval = 350) {
-      for (let i = 0; i < times; i++) {
-        setTimeout(() => {
-          const ctx = new (window.AudioContext || window.webkitAudioContext)();
-          const osc = ctx.createOscillator();
-          osc.type = 'square';
-          osc.frequency.value = freq;
-          const gain = ctx.createGain();
-          gain.gain.value = 0.2; // 音量適中
-          osc.connect(gain);
-          gain.connect(ctx.destination);
-          osc.start();
-          osc.stop(ctx.currentTime + dur / 1000);
-        }, i * interval);
+    // 全局 AudioContext（iPhone 必須這樣解鎖音頻）
+    let audioCtx = null;
+
+    function initAudio() {
+      if (audioCtx === null) {
+        audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+      }
+      if (audioCtx.state !== 'running') {
+        audioCtx.resume().then(() => {
+          console.log('音頻已解鎖');
+        });
+      }
+    }
+
+    // 播放蜂鳴聲（支援多個連續 beep，iPhone 友好）
+    function playBeep(count = 1, freq = 800, duration = 0.15, interval = 0.4) {
+      if (!audioCtx || audioCtx.state !== 'running') return;
+
+      for (let i = 0; i < count; i++) {
+        const osc = audioCtx.createOscillator();
+        osc.type = 'square';
+        osc.frequency.value = freq;
+
+        const gain = audioCtx.createGain();
+        gain.gain.value = 0.3;
+
+        osc.connect(gain);
+        gain.connect(audioCtx.destination);
+
+        const startTime = audioCtx.currentTime + (i * interval);
+        osc.start(startTime);
+        osc.stop(startTime + duration);
       }
     }
 
@@ -253,6 +270,9 @@
     }
 
     function startCountdown(id) {
+      // 解鎖音頻（iPhone 必須在用戶點擊後才允許播放）
+      initAudio();
+
       const remaining = parseInt(document.getElementById(`count-${id}`).textContent);
       if (remaining <= 0) return;
 
@@ -267,7 +287,7 @@
         if (seconds <= 0) {
           clearInterval(intervals[id]);
           delete intervals[id];
-          playBeep(1); // 運動結束：單聲 beep
+          playBeep(1, 900, 0.12); // 運動結束：單聲高頻短 beep
           completeRep(id);
         }
       }, 1000);
@@ -300,7 +320,7 @@
         if (seconds <= 0) {
           clearInterval(restIntervals[id]);
           delete restIntervals[id];
-          playBeep(2); // 休息結束：雙聲 beep
+          playBeep(3, 600, 0.18, 0.35); // 休息結束：三聲較低頻 beep（更容易區分，且 iPhone 更可靠）
           document.getElementById(`rest-timer-${id}`).textContent = '休息結束！可以開始下一組';
         }
       }, 1000);
@@ -361,14 +381,15 @@
       updateRecords();
 
       // 初始化休息顯示
-      document.getElementById('rest-timer-knee').textContent = '休息：00:00';
-      document.getElementById('rest-timer-seated').textContent = '休息：00:00';
-      document.getElementById('rest-timer-bridge').textContent = '休息：00:00';
+      document.getElementById('rest-timer-knee').textContent = '休息：00:30';
+      document.getElementById('rest-timer-seated').textContent = '休息：00:30';
+      document.getElementById('rest-timer-bridge').textContent = '休息：00:10';
     };
   </script>
 
   <footer style="text-align:center; margin:60px; color:#777; font-size:1.1em;">
     記住：如果不舒服就停，之後畀物理治療師睇。<br>
+    祝爸爸早日舒服啲！❤️
   </footer>
 </body>
 </html>
