--- a/father-app.html
+++ b/father-app.html
@@ -130,7 +130,7 @@
 </head>
 <body>
   <h1>每日運動時間表</h1>
-  <p style="text-align:center; color:#555; font-size:1.1em;">（等物理治療期間的家居練習，每日1-2次，每次10-20分鐘）</p>
+  <p style="text-align:center; color:#555; font-size:1.1em;">（家居練習，每日1-2次，每次10-20分鐘）</p>
 
   <div class="section">
     <h2>每日建議流程</h2>
@@ -160,7 +160,6 @@
   <div id="knee" class="tab-content active">
     <h2 style="text-align:center;">膝蓋抱胸伸展</h2>
     <p style="text-align:center; font-size:1.3em;">每邊保持25秒，共5次</p>
-    <p class="wake-note">按「開始」後會保持螢幕亮住，避免計時停（做完會自動恢復）</p>
     <img src="https://images.squarespace-cdn.com/content/v1/5f5e8592d2b0854b18af6975/cd839177-4fec-4260-aa52-b2994bd90a49/knee+to+chest+stretch.jpg?format=1000w" alt="膝蓋抱胸伸展">
     <img src="https://www.verywellhealth.com/thmb/v_FW5Djsqrg2EGKK0AWrFJrD9m0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-668296954-5e96103d62e04a08a0cfaaa039c2bf26.jpg" alt="膝蓋抱胸示範">
 
@@ -177,7 +176,6 @@
   <div id="seated" class="tab-content">
     <h2 style="text-align:center;">坐姿向前彎</h2>
     <p style="text-align:center; font-size:1.3em;">保持20秒，共5次</p>
-    <p class="wake-note">按「開始」後會保持螢幕亮住，避免計時停（做完會自動恢復）</p>
     <img src="https://i.ytimg.com/vi/PUVTGBARpoo/maxresdefault.jpg" alt="坐姿向前彎">
     <img src="https://cdn.shopify.com/s/files/1/0078/8715/9367/files/Yoga-Stretch-Seated-Forward-Bend.png?v=1637346396" alt="椅子向前彎">
 
@@ -194,7 +192,6 @@
   <div id="bridge" class="tab-content">
     <h2 style="text-align:center;">改版臀橋</h2>
     <p style="text-align:center; font-size:1.3em;">抬4秒，共8次</p>
-    <p class="wake-note">按「開始」後會保持螢幕亮住，避免計時停（做完會自動恢復）</p>
     <img src="https://www.shape.com/thmb/Ts05mjOzOAAJGxPxzbEtvkMRX7w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/SHP_MTM_Glute-Bridge_3x2-bfe761cd0ffb45e28875198ebed77038.jpg" alt="臀橋">
     <img src="https://images.ctfassets.net/hjcv6wdwxsdz/7KMn9axHkdRmbkoejvkrwo/6699f5ad3ef63ef509cc49fdd43d2a19/bridge-claudia-hold__1_.png?w=1200" alt="改版臀橋">
 
